<?xml version="1.0"?>
<package format="2">
  <name>noether_simulator</name>
  <version>0.0.0</version>
  <description>The noether_simulator package</description>
  <maintainer email="jorge.nicho@swri.org">jorge</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <depend>mesh_segmenter</depend>
  <depend>tool_path_planner</depend>
  <depend>path_sequence_planner</depend>
  <depend>vtk_viewer</depend>
  <depend>pcl_conversions</depend>
  <depend>dynamic_reconfigure</depend>

</package>
