<?xml version="1.0"?>
<package>
  <name>path_sequence_planner</name>
  <version>0.0.0</version>
  <description>The path_sequence_planner package</description>
 <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>vtk_viewer</build_depend>
  <build_depend>tool_path_planner</build_depend>

  <run_depend>vtk_viewer</run_depend>
  <run_depend>tool_path_planner</run_depend>

  <test_depend>rosunit</test_depend>

</package>
