<?xml version="1.0"?>
<package format="2">
  <name>tool_path_planner</name>
  <version>0.0.0</version>
  <description>The path_planner package</description>
  <maintainer email="alex.goins@swri.org">alex</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roslib</build_depend>

  <depend>eigen_conversions</depend>
  <depend>noether_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>noether_msgs</depend>
  <depend>rosconsole</depend>
  <depend>shape_msgs</depend>
  <depend>vtk_viewer</depend>

  <test_depend>rosunit</test_depend>

</package>
