<?xml version="1.0"?>
<package format="2">
  <name>vtk_viewer</name>
  <version>0.0.0</version>
  <description>The vtk_viewer package</description>
  <maintainer email="alex.goins@swri.org">alex</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosconsole</depend>

</package>
