<?xml version="1.0"?>
<package format="2">
  <name>vtk_viewer</name>
  <version>0.0.0</version>
  <description>The vtk_viewer package</description>
  <maintainer email="alex.goins@swri.org">alex</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <depend>rosconsole</depend>
  <depend>libpcl-all-dev</depend>

  <test_depend>rosunit</test_depend>

</package>
