<?xml version="1.0"?>
<package format="2">
  <name>vtk_viewer</name>
  <version>0.0.0</version>
  <description>The vtk_viewer package</description>
 <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_common_scripts</build_depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>libpcl-all-dev</depend>

  <test_depend>rosunit</test_depend>
  
  <export>
	  <build_type> cmake </build_type>
  </export>

</package>
